# blflash

./: .gitignore  Cargo.toml  PUBLISH.md  README.md
.github/workflows/: build.yml  publish.yml  rust.yml
blflash/: Cargo.toml  README.md  build.rs
blflash/src/: async_serial.rs  config.rs  connection.rs  elf.rs  error.rs  flasher.rs  image.rs  lib.rs  main.rs
blflash/src/async_serial/: mod.rs  native.rs  wasm.rs
blflash/src/chip/: mod.rs
blflash/src/chip/bl602/: mod.rs
blflash/src/chip/bl602/cfg/: efuse_bootheader_cfg.conf  ro_params.dtb
blflash/src/fs/: mod.rs  native.rs  wasm.rs
blflash/src/image/: bootheader.rs  mod.rs  partition.rs
blflash/webidl/enabled/: serial.webidl
cargo-blflash/: Cargo.toml  README.md
cargo-blflash/src/: main.rs
libblflash/: Cargo.toml  index.html  index.js
libblflash/src/: lib.rs  utils.rs
