[package]
name = "blflash"
version = "0.1.0"
authors = ["spacelin <spacelin@tencent.com>"]
edition = "2018"

[[bin]]
name = "blflash"
path = "src/main.rs"

[lib]

[dependencies]
serial = "0.4"
xmas-elf = "0.7.0"
main_error = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
directories-next = "1.0.1"
thiserror = "1.0.22"
indicatif = "0.15.0"
log = "0.4.11"
env_logger = "0.8.2"
deku = "0.9.1"
byteorder = "1.3.4"
sha2 = "0.9.2"
structopt = { version = "0.3.21", features = ["paw"] }
paw = "1.0.0"
