[package]
name = "blflash"
description = "BL602 serial flasher."
version = "0.3.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/blflash"
repository = "https://github.com/spacemeowx2/blflash"

[[bin]]
name = "blflash"
path = "src/main.rs"

[lib]

[dependencies]
serial = "0.4"
xmas-elf = "0.7.0"
main_error = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
directories-next = "1.0.1"
thiserror = "1.0.22"
indicatif = "0.15.0"
log = "0.4.11"
env_logger = "0.8.2"
deku = "0.9.1"
byteorder = "1.3.4"
sha2 = "0.9.2"
structopt = { version = "0.3.21", features = ["paw"] }
paw = "1.0.0"
crc = "1.8.1"
hex = "0.4.2"
parse_int = "0.4.0"
futures = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
once_cell = "1.5"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Navigator"
]