[package]
name = "blflash"
description = "BL602 serial flasher."
version = "0.3.4"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/blflash"
repository = "https://github.com/spacemeowx2/blflash"

[[bin]]
name = "blflash"
path = "src/main.rs"

[lib]

[dependencies]
serial = "0.4"
xmas-elf = "0.9.0"
main_error = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
thiserror = "1.0.22"
indicatif = "0.16.0"
log = "0.4.11"
env_logger = "0.10.0"
deku = "0.15.1"
byteorder = "1.3.4"
sha2 = "0.10.6"
structopt = { version = "0.3.21", features = ["paw"] }
paw = "1.0.0"
crc = "1.8.1"
hex = "0.4.2"
parse_int = "0.6.0"
bitvec = "1.0.1"
