[package]
name = "cargo-blflash"
description = "BL602 serial flasher."
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/blflash"
repository = "https://github.com/spacemeowx2/blflash"

[dependencies]
cargo-project = "0.2.4"
blflash = { version = "*", path = "../blflash" }
main_error = "0.1.1"
pico-args = "0.3.4"
serial = "0.4"
