[package]
name = "cargo-blflash"
description = "BL602 serial flasher."
version = "0.3.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/blflash"
repository = "https://github.com/spacemeowx2/blflash"

[dependencies]
cargo-project = "0.2.4"
blflash = { version = "0.3", path = "../blflash" }
main_error = "0.1.1"
serial = "0.4"
color-eyre = "0.5.10"
structopt = "0.3.21"
paw = "1.0.0"
env_logger = "0.8.2"
